--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   const musicBtn = document.getElementById('musicBtn');
 
   // Put your audio link here (ideally direct .mp3 URL)
-  const musicUrl = "https://drive.google.com/uc?export=download&id=13WqnNAQ0qqoSEvP4vMRiBPav-tL9KNav";
+  const musicUrl = "music.mp3";
   audio.src = musicUrl;
 
   async function tryPlayMusic() {
