--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
   <!-- Music UI (premium behavior controlled by JS) -->
   <div class="music-ui">
-    <span class="music-status" id="musicStatus">Music</span>
+<span class="music-status" id="musicStatus">Music: tap to play 🎶</span>
     <button id="musicBtn">Tap to play</button>
   </div>
 
