--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       animation: floatUp linear infinite;
       border-radius: 3px;
     }
-    .bg-heart:before, .bg-heart:after{
+    .bg-heart::before, .bg-heart::after{
       content:"";
       position:absolute;
       width:18px;
@@ -45,8 +45,8 @@
       background:#ff4d88;
       border-radius:50%;
     }
-    .bg-heart:before{ left:-9px; top:0; }
-    .bg-heart:after{ left:0; top:-9px; }
+    .bg-heart::before{ left:-9px; top:0; }
+    .bg-heart::after{ left:0; top:-9px; }
 
     @keyframes floatUp{
       from { transform: translateY(80vh) rotate(45deg); }
@@ -81,69 +81,79 @@
       transform: scale(1);
     }
 
-    /* Landing heart */
-.big-heart{
-  position: relative;
-  width: 260px;
-  height: 240px;
-  background: #ff2e73;
-  transform: rotate(-45deg);
-  cursor: pointer;
-  box-shadow: 0 20px 50px rgba(0,0,0,0.18);
-  animation: pulse 1.3s infinite ease-in-out;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  border-radius: 22px;
-}
+    /* Landing heart (FIXED LAYERS + readable text) */
+    .big-heart{
+      position: relative;
+      width: 260px;
+      height: 240px;
+      background: #ff2e73;
+      transform: rotate(-45deg);
+      cursor: pointer;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.18);
+      animation: pulse 1.3s infinite ease-in-out;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      border-radius: 22px;
 
-.big-heart::before,
-.big-heart::after{
-  content:"";
-  position:absolute;
-  width:260px;
-  height:240px;
-  background:#ff2e73;
-  border-radius:50%;
-}
+      /* KEY FIX: keeps ::before/::after behind text */
+      isolation: isolate;
+    }
 
-.big-heart::before{
-  top:-120px;
-  left:0;
-}
+    .big-heart::before,
+    .big-heart::after{
+      content:"";
+      position:absolute;
+      width:260px;
+      height:240px;
+      background:#ff2e73;
+      border-radius:50%;
+      z-index: -1; /* KEY FIX */
+    }
 
-.big-heart::after{
-  left:120px;
-  top:0;
-}
+    .big-heart::before{
+      top:-120px;
+      left:0;
+    }
 
-@keyframes pulse{
-  0%,100%{ transform: rotate(-45deg) scale(1); }
-  50%{ transform: rotate(-45deg) scale(1.07); }
-}
+    .big-heart::after{
+      left:120px;
+      top:0;
+    }
 
-.big-heart:hover{
-  filter: brightness(1.05);
-}
+    @keyframes pulse{
+      0%,100%{ transform: rotate(-45deg) scale(1); }
+      50%{ transform: rotate(-45deg) scale(1.07); }
+    }
 
-.heart-text{
-  position:absolute;
-  transform: rotate(45deg);
-  color:white;
-  font-weight: 900;
-  font-size: 26px;
-  text-align:center;
-  width: 220px;
-  line-height:1.2;
-  text-shadow: 0 2px 10px rgba(0,0,0,0.25);
-}
+    .big-heart:hover{
+      filter: brightness(1.05);
+    }
 
-/* Bigger landing line */
-.hint{
-  font-size: 18px;
-  font-weight: 650;
-  opacity: .9;
-}
+    .heart-text{
+      position:absolute;
+      transform: rotate(45deg);
+      color:white;
+      font-weight: 900;
+      font-size: 26px;
+      text-align:center;
+      width: 220px;
+      line-height:1.2;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.25);
+      z-index: 2; /* KEY FIX */
+
+      /* readability boost */
+      background: rgba(0,0,0,0.18);
+      padding: 10px 14px;
+      border-radius: 999px;
+      backdrop-filter: blur(6px);
+    }
+
+    .hint{
+      font-size: 18px;
+      font-weight: 650;
+      opacity: .9;
+    }
 
     /* Proposal card */
     .card{
@@ -203,7 +213,7 @@
     #noBtn{
       background: #ef4444;
       color: white;
-      position:absolute; /* we will move it inside .buttons */
+      position:absolute;
       left: 55%;
       top: 55%;
       transform: translate(-50%, -50%) scale(1);
@@ -226,7 +236,6 @@
       box-shadow: 0 10px 25px rgba(0,0,0,0.12);
       font-size: 13px;
 
-      /* NEW: start hidden */
       opacity: 0;
       transform: translateY(10px);
       pointer-events: none;
@@ -250,7 +259,6 @@
       font-weight: 650;
     }
 
-    /* Confetti canvas */
     #confetti{
       position: fixed;
       inset:0;
@@ -258,7 +266,6 @@
       z-index: 10;
     }
 
-    /* Yes overlay message */
     .overlay{
       position: fixed;
       inset:0;
@@ -291,42 +298,38 @@
       line-height: 1.45;
     }
 
-    /* Responsive */
-   @media (max-width: 420px){
-  .big-heart{
-    width: 220px;
-    height: 200px;
-  }
-  .big-heart::before,
-  .big-heart::after{
-    width: 220px;
-    height: 200px;
-  }
-  .big-heart::before{
-    top: -100px;
-    left: 0;
-  }
-  .big-heart::after{
-    left: 100px;
-    top: 0;
-  }
-  .heart-text{
-    font-size: 20px;
-    width: 190px;
-  }
-  .hint{
-    font-size: 16px;
-  }
-  .buttons{ height: 140px; }
-}
-
+    @media (max-width: 420px){
+      .big-heart{
+        width: 220px;
+        height: 200px;
+      }
+      .big-heart::before,
+      .big-heart::after{
+        width: 220px;
+        height: 200px;
+      }
+      .big-heart::before{
+        top: -100px;
+        left: 0;
+      }
+      .big-heart::after{
+        left: 100px;
+        top: 0;
+      }
+      .heart-text{
+        font-size: 20px;
+        width: 190px;
+      }
+      .hint{
+        font-size: 16px;
+      }
+      .buttons{ height: 140px; }
+    }
   </style>
 </head>
 <body>
 
-  <!-- background floating hearts -->
   <div id="bg"></div>
-
   <canvas id="confetti"></canvas>
 
   <div class="overlay" id="overlay">
@@ -340,15 +343,13 @@
   </div>
 
   <div class="container">
-    <!-- Scene 1 -->
     <div class="scene active" id="scene1">
       <div class="big-heart" id="openHeart" aria-label="Open">
         <div class="heart-text">Click here to open</div>
       </div>
-       <div class="hint">Click the heart to open your surprise 💖</div>
+      <div class="hint">Click the heart to open your surprise 💖</div>
     </div>
 
-    <!-- Scene 2 -->
     <div class="scene" id="scene2">
       <div class="card">
         <h1>Will you be my Valentine?</h1>
@@ -364,9 +365,8 @@
     </div>
   </div>
 
-  <!-- Music UI (premium behavior controlled by JS) -->
   <div class="music-ui">
-<span class="music-status" id="musicStatus">Music: tap to play 🎶</span>
+    <span class="music-status" id="musicStatus">Music: tap to play 🎶</span>
     <button id="musicBtn">Tap to play</button>
   </div>
 
@@ -379,8 +379,6 @@
   const musicBtn = document.getElementById('musicBtn');
   const musicUI = document.querySelector('.music-ui');
 
-  // Host your MP3 in the same GitHub repo (same folder as index.html)
-  // Upload a file named: music.mp3
   const musicUrl = "music.mp3";
   audio.src = musicUrl;
 
@@ -389,7 +387,6 @@
     musicBtn.textContent = btnText;
     musicUI.classList.add('show');
   }
-
   function hideMusicUI() {
     musicUI.classList.remove('show');
   }
@@ -420,10 +417,7 @@
   });
 
   musicBtn.addEventListener('click', async () => {
-    if (!audio.paused) {
-      audio.pause();
-      return;
-    }
+    if (!audio.paused) { audio.pause(); return; }
     await tryPlayMusic();
   });
 
@@ -459,7 +453,6 @@
   }
 
   openHeart.addEventListener('click', async () => {
-    // user gesture -> music should play reliably
     await tryPlayMusic();
     goToScene2();
   });
@@ -491,15 +484,8 @@
   }
 
   noBtn.addEventListener('mouseenter', moveNoButton);
-  noBtn.addEventListener('touchstart', (e) => {
-    e.preventDefault();
-    moveNoButton();
-  }, { passive:false });
-
-  noBtn.addEventListener('click', (e) => {
-    e.preventDefault();
-    moveNoButton();
-  });
+  noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); moveNoButton(); }, { passive:false });
+  noBtn.addEventListener('click', (e) => { e.preventDefault(); moveNoButton(); });
 
   // ========= YES CONFETTI =========
   const canvas = document.getElementById('confetti');
