--- a/index.html
+++ b/index.html
@@ -81,45 +81,51 @@
       transform: scale(1);
     }
 
-    /* Landing heart (FIXED LAYERS + readable text) */
-    .big-heart{
-      position: relative;
-      width: 260px;
-      height: 240px;
-      background: #ff2e73;
-      transform: rotate(-45deg);
-      cursor: pointer;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.18);
-      animation: pulse 1.3s infinite ease-in-out;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      border-radius: 22px;
+    /* Landing heart */
+.big-heart{
+  width: 280px;
+  height: 280px;
+  cursor: pointer;
+  position: relative;
+  display: grid;
+  place-items: center;
+  animation: pulse 1.2s infinite ease-in-out;
+  filter: drop-shadow(0 22px 40px rgba(0,0,0,0.18));
+}
 
-      /* KEY FIX: keeps ::before/::after behind text */
-      isolation: isolate;
-    }
+.heart-svg{
+  width: 100%;
+  height: 100%;
+  fill: #ff2e73;
+}
 
-    .big-heart::before,
-    .big-heart::after{
-      content:"";
-      position:absolute;
-      width:260px;
-      height:240px;
-      background:#ff2e73;
-      border-radius:50%;
-      z-index: -1; /* KEY FIX */
-    }
+@keyframes pulse{
+  0%,100%{ transform: scale(1); }
+  50%{ transform: scale(1.06); }
+}
 
-    .big-heart::before{
-      top:-120px;
-      left:0;
-    }
+.heart-text{
+  position: absolute;
+  text-align: center;
+  color: #fff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.2;
+  width: 220px;
+  background: rgba(0,0,0,0.20);
+  padding: 10px 14px;
+  border-radius: 999px;
+  backdrop-filter: blur(6px);
+  text-shadow: 0 2px 10px rgba(0,0,0,0.25);
+}
 
-    .big-heart::after{
-      left:120px;
-      top:0;
-    }
+.hint{
+  font-size: 18px;
+  font-weight: 650;
+  opacity: .9;
+  margin-top: 10px;
+}
+
 
     @keyframes pulse{
       0%,100%{ transform: rotate(-45deg) scale(1); }
@@ -344,11 +350,17 @@
 
   <div class="container">
     <div class="scene active" id="scene1">
-      <div class="big-heart" id="openHeart" aria-label="Open">
-        <div class="heart-text">Click here to open</div>
-      </div>
-      <div class="hint">Click the heart to open your surprise 💖</div>
-    </div>
+  <div class="big-heart" id="openHeart" aria-label="Open">
+    <svg class="heart-svg" viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 21s-7.2-4.6-9.6-8.7C.7 9 .9 5.8 3.3 4.1c2-1.4 4.7-.9 6.2.9L12 7.7l2.5-2.7c1.5-1.8 4.2-2.3 6.2-.9 2.4 1.7 2.6 4.9.9 8.2C19.2 16.4 12 21 12 21z"/>
+    </svg>
+
+    <div class="heart-text">Click here to open</div>
+  </div>
+
+  <div class="hint">Click the heart to open your surprise 💖</div>
+</div>
+
 
     <div class="scene" id="scene2">
       <div class="card">
